<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/color_bg">


    <EditText
        android:id="@+id/et_registration_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:singleLine="true"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_name"/>

    <EditText
        android:id="@+id/et_registration_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_email"/>

    <EditText
        android:id="@+id/et_registration_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_password"/>

    <EditText
        android:id="@+id/et_registration_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_repassword"/>

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/string_registration"/>

</LinearLayout>