<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/color_bg">

    <ImageView
        android:id="@+id/iv_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:background="@color/color_bg"/>

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_email" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textSize="@dimen/dimen_et_textSize"
        android:hint="@string/string_hint_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/string_login"/>

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_new_user"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true" />


</LinearLayout>